# ChangeLog for dev-python/djblets
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 May 2010; Michael Weber (xmw) <gentoo@xmw.de> ChangeLog:
  New Ebuild for bug 318993
