@@ -1,3 +1,4 @@
 DIST djblets-0.6.2.tar.bz2 227551 RMD160 2768c6eba2649d95f445a3775fb066459eaf2a8e SHA1 f08d7292abed7c1ea8eb679e578f713a652c8fad SHA256 eb5a76bbcf4051b50ae18fa4971b352d29801f415e1517342035f44aa2d01e7d
 EBUILD djblets-0.6.2.ebuild 462 RMD160 1b48c7eee1c83414bdae134ae1bb66c08ed52621 SHA1 8104d08e71bec9d6bb083c5e0c57fbbe88302451 SHA256 2ce403f11e47e7a1d6fa77fe552e4d479b7c5d49b0a055ceec63af6515425155
-MISC ChangeLog 210 RMD160 33bc83014a5c711ce135a5696e2002f4862b2729 SHA1 8e5fdc747479f1577f1111dc18ce6c932445f643 SHA256 90fd4d4bcd3ac6634823874cd0abe1b3e1e8a19c3f961f7e1a553fbe450eb58b
+MISC ChangeLog 319 RMD160 eba344aa7d3acf291a9d6f40838a36f2a1c2acd2 SHA1 be04216f3c2d7c0ee5741fdfcdac2e7dabb154d4 SHA256 95c3f842988953362867d3391e70de865b3ba91eb4af1d9400ef1f5843e6d279
+MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
