@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  17 May 2010; Michael Weber (xmw) <gentoo@xmw.de> ChangeLog:
-  New Ebuild for bug 318993
+  17 May 2010; Michael Weber (xmw) <gentoo@xmw.de> +metadata.xml:
+  Added missing metadata.xml
+
+  17 May 2010; Michael Weber (xmw) <gentoo@xmw.de> 
+  +djblets-0.6.2.ebuild: New Ebuild for bug 318993
 
